Fix: Submit OTP 4 digits changed to 6 digits, form overflow auto added

--- a/src/app/components/registration/registration-basic/registration-basic.component.scss
+++ b/src/app/components/registration/registration-basic/registration-basic.component.scss
@@ -177,3 +177,7 @@ span.suggestions {
     clear: both;
   }
 }
+
+.reg_left_section {
+  overflow-y: auto;
+}
